--- a/src/Components/Categories/Categories.module.css
+++ b/src/Components/Categories/Categories.module.css
@@ -14,3 +14,12 @@
 .categories__delete {
     cursor: pointer;
 }
+
+.categories__item_active {
+    font-weight: bold;
+}
+
+.categories__text {
+    text-decoration: none;
+    color: #282c34;
+}
